--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                 <li><a href="#hindsight">Hindsight</a></li>
                 <li><a href="#foresight">Foresight</a></li>
                 <li><a href="#results">Results</a></li>
-                <li><a href="https://forms.gle/BQbr35Mqxesrd8ZDA" class="nav-cta">Start Your Journey</a></li>
+                <li><a href="https://forms.gle/BQbr35Mqxesrd8ZDA" class="nav-cta">Start Your Journey!</a></li>
             </ul>
             
             <!-- Mobile Navigation (hidden by default) -->
@@ -730,7 +730,7 @@
                 <li><a href="#hindsight">Hindsight</a></li>
                 <li><a href="#foresight">Foresight</a></li>
                 <li><a href="#results">Results</a></li>
-                <li><a href="https://forms.gle/BQbr35Mqxesrd8ZDA" class="nav-cta">Start Your Journey</a></li>
+                <li><a href="https://forms.gle/BQbr35Mqxesrd8ZDA" class="nav-cta">Start Your Journey!</a></li>
             </ul>
         </div>
     </header>
