Correct brand name

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
 			<div class="container header-container">
 				<a href="#" class="logo">
 					<i class="fas fa-chart-line"></i>
-					Sales4<span>Sight</span>
+					<span>Sales4Sight Inc.</span>
 				</a>
 
 				<button class="mobile-menu-btn" id="mobileMenuBtn">
