--- a/index.html
+++ b/index.html
@@ -717,7 +717,6 @@
 				<!-- Desktop Navigation -->
 				<ul class="nav-desktop">
 					<li><a href="#home">Home</a></li>
-
 					<li><a href="#oversight">Oversight</a></li>
 					<li><a href="#insight">Insight</a></li>
 					<li><a href="#hindsight">Hindsight</a></li>
@@ -733,7 +732,6 @@
 				<!-- Mobile Navigation (hidden by default) -->
 				<ul class="nav-mobile" id="navMobile">
 					<li><a href="#home">Home</a></li>
-
 					<li><a href="#oversight">Oversight</a></li>
 					<li><a href="#insight">Insight</a></li>
 					<li><a href="#hindsight">Hindsight</a></li>
@@ -752,7 +750,7 @@
 		<section id="home" class="section">
 			<div class="container">
 				<div class="section-title">
-					<h2>The Sales4Sight Philosophy: Master Every Perspective</h2>
+					<h2>Four Pillars, One Framework</h2>
 					<p>
 						In today's competitive marketplace, success in sales demands far
 						more than effort and enthusiasm—it requires mastering four critical
@@ -763,7 +761,7 @@
 
 				<div class="philosophy-container">
 					<div class="perspective">
-						<div class="perspective-icon">O</div>
+						<div class="perspective-icon"></div>
 						<h3>Oversight</h3>
 						<p>
 							Ensuring accountable execution through real-time visibility and
@@ -771,7 +769,7 @@
 						</p>
 					</div>
 					<div class="perspective">
-						<div class="perspective-icon">I</div>
+						<div class="perspective-icon"></div>
 						<h3>Insight</h3>
 						<p>
 							Understanding buyer psychology to drive meaningful conversations
@@ -779,7 +777,7 @@
 						</p>
 					</div>
 					<div class="perspective">
-						<div class="perspective-icon">H</div>
+						<div class="perspective-icon"></div>
 						<h3>Hindsight</h3>
 						<p>
 							Learning from experience to continuously refine and improve your
@@ -787,7 +785,7 @@
 						</p>
 					</div>
 					<div class="perspective">
-						<div class="perspective-icon">F</div>
+						<div class="perspective-icon"></div>
 						<h3>Foresight</h3>
 						<p>Anticipating opportunities and staying ahead of market trends</p>
 					</div>
@@ -810,7 +808,7 @@
 			<div class="container">
 				<div class="feature-section">
 					<div class="feature-header">
-						<div class="feature-icon">O</div>
+						<div class="feature-icon"></div>
 						<h2 class="feature-title">
 							Oversight: The Foundation of Accountable Execution
 						</h2>
@@ -868,7 +866,7 @@
 			<div class="container">
 				<div class="feature-section">
 					<div class="feature-header">
-						<div class="feature-icon">I</div>
+						<div class="feature-icon"></div>
 						<h2 class="feature-title">Insight: Unlocking Buyer Psychology</h2>
 					</div>
 
@@ -925,7 +923,7 @@
 			<div class="container">
 				<div class="feature-section">
 					<div class="feature-header">
-						<div class="feature-icon">H</div>
+						<div class="feature-icon"></div>
 						<h2 class="feature-title">
 							Hindsight: Learning from Experience to Improve
 						</h2>
@@ -984,7 +982,7 @@
 			<div class="container">
 				<div class="feature-section">
 					<div class="feature-header">
-						<div class="feature-icon">F</div>
+						<div class="feature-icon"></div>
 						<h2 class="feature-title">
 							Foresight: Anticipating Opportunities Before They Arise
 						</h2>
@@ -1068,12 +1066,12 @@
 			<div class="container">
 				<div class="section-title">
 					<h2 style="color: white">
-						The Sales4Sight Advantage: Clarity, Confidence, Conversion
+						The Sales4Sight Promise: Clarity, Confidence, Conversion
 					</h2>
 					<p style="color: rgba(255, 255, 255, 0.9)">
 						Sales4Sight's integrated approach delivers transformative results by
-						aligning three critical elements: your people, your processes, and
-						your technology.
+						aligning three critical elements: Your people, Your processes, and
+						Your technology.
 					</p>
 				</div>
 
@@ -1196,7 +1194,7 @@
 		<section class="section" Id="results">
 			<div class="container">
 				<div class="section-title">
-					<h2>Real Results: Transforming Sales Teams Worldwide</h2>
+					<h2>Real Results: Transforming Sales Teams</h2>
 					<p>
 						Sales4Sight's impact extends across industries and geographies,
 						delivering consistent, measurable improvements that transform sales
@@ -1234,7 +1232,7 @@
 		<section class="section" style="background-color: #f0f7ff">
 			<div class="container">
 				<div class="section-title">
-					<h2>Your Journey Starts Here: From Oversight to Foresight</h2>
+					<h2>The Journey Starts Here : From Oversight to Foresight</h2>
 					<p>
 						The path to sales excellence begins with a single decision—to
 						embrace a comprehensive, 360-degree perspective that transforms how
